Fix save / remove button spacing

--- a/frontend/src/components/recipe_results/recipe_results.scss
+++ b/frontend/src/components/recipe_results/recipe_results.scss
@@ -81,6 +81,7 @@
         .recipe-source {
           font-size: 12px;
           width: 130px;
+          width: 80%;
         }
   
         button {
